--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Schedule.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Schedule.html
@@ -77,27 +77,101 @@
                                             <!-- <form method="POST" onsubmit="get_cred($('#type').val());"> -->
                                                 <div class="md-form">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Vaccine: </label>
-                                                    <select class="form-select" name="vax_name" aria-label="Default select example">
-                                                        <option value="BCG">BCG</option>
-                                                        <option value="Hepatitis B">Hepatitis B</option>
-                                                        <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
-                                                        <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
-                                                        <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
-                                                        <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
-                                                        <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
-                                                        <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
+                                                    <select required class="form-select" name="vax_name" aria-label="Default select example" onfocus="changeNum(this)">
+                                                        {% if 'BCG' in vax_list and 'Hepatitis B' in vax_list and 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and 'Tetanus Toxoid' in vax_list and 'Inactivated Polio Vaccine' in vax_list and 'Measles Mumps - Rubella' in vax_list and dose_list.7 == 2 %}
+                                                            <option disabled value="BCG">BCG</option>
+                                                            <option disabled value="Hepatitis B">Hepatitis B</option>
+                                                            <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
+                                                            <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
+                                                            <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
+                                                            <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
+                                                            <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
+                                                            <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
+                                                        {% elif 'BCG' in vax_list and 'Hepatitis B' in vax_list and 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and 'Tetanus Toxoid' in vax_list and 'Inactivated Polio Vaccine' in vax_list and dose_list.6 == 2 %}
+                                                            <!-- <option disabled value="BCG">BCG</option> -->
+                                                            <!-- <option disabled value="Hepatitis B">Hepatitis B</option> -->
+                                                            <!-- <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option> -->
+                                                            <!-- <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option> -->
+                                                            <!-- <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option> -->
+                                                            <!-- <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option> -->
+                                                            <!-- <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option> -->
+                                                            <option value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
+                                                        {% elif 'BCG' in vax_list and 'Hepatitis B' in vax_list and 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and 'Tetanus Toxoid' in vax_list %}
+                                                            <!-- <option disabled value="BCG">BCG</option> -->
+                                                            <!-- <option disabled value="Hepatitis B">Hepatitis B</option> -->
+                                                            <!-- <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option> -->
+                                                            <!-- <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option> -->
+                                                            <!-- <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option> -->
+                                                            <!-- <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option> -->
+                                                            <option value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
+                                                            <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
+                                                        {% elif 'BCG' in vax_list and 'Hepatitis B' in vax_list and 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and dose_list.4 == 3 %}
+                                                            <!-- <option disabled value="BCG">BCG</option> -->
+                                                            <!-- <option disabled value="Hepatitis B">Hepatitis B</option> -->
+                                                            <!-- <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option> -->
+                                                            <!-- <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option> -->
+                                                            <!-- <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option> -->
+                                                            <option value="Tetanus Toxoid">Tetanus Toxoid</option>
+                                                            <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
+                                                            <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
+                                                        {% elif 'BCG' in vax_list and 'Hepatitis B' in vax_list and 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and dose_list.3 == 3 %}
+                                                            <!-- <option disabled value="BCG">BCG</option> -->
+                                                            <!-- <option disabled value="Hepatitis B">Hepatitis B</option> -->
+                                                            <!-- <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option> -->
+                                                            <!-- <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option> -->
+                                                            <option value="Measles Containing Vaccines">Measles Containing Vaccines</option>
+                                                            <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
+                                                            <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
+                                                            <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
+                                                        {% elif 'BCG' in vax_list and 'Hepatitis B' in vax_list and 'Oral Poliovirus Vaccine' in vax_list and dose_list.2 == 3 %}
+                                                            <!-- <option disabled value="BCG">BCG</option> -->
+                                                            <!-- <option disabled value="Hepatitis B">Hepatitis B</option> -->
+                                                            <!-- <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option> -->
+                                                            <option value="Pentavalent Vaccine">Pentavalent Vaccine</option>
+                                                            <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
+                                                            <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
+                                                            <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
+                                                            <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
+                                                        {% elif 'BCG' in vax_list and 'Hepatitis B' in vax_list %}
+                                                            <!-- <option disabled value="BCG">BCG</option> -->
+                                                            <!-- <option disabled value="Hepatitis B">Hepatitis B</option> -->
+                                                            <option value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
+                                                            <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
+                                                            <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
+                                                            <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
+                                                            <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
+                                                            <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
+                                                        {% elif 'BCG' in vax_list %}
+                                                            <!-- <option value="BCG">BCG</option> -->
+                                                            <option value="Hepatitis B">Hepatitis B</option>
+                                                            <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
+                                                            <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
+                                                            <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
+                                                            <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
+                                                            <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
+                                                            <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
+                                                        {% else %}
+                                                            <option value="BCG">BCG</option>
+                                                            <option disabled value="Hepatitis B">Hepatitis B</option>
+                                                            <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
+                                                            <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
+                                                            <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
+                                                            <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
+                                                            <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
+                                                            <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
+                                                        {% endif %}
                                                     </select>
                                                 </div>
                                                 <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Doses:</label>
-                                                    <input class="form-control" type="number" name="dose" id="dose">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Dose(s):</label>
+                                                    <input required class="form-control" type="number" min="1" max="3" name="dose" id="dose">
                                                 </div>
                                                 <!-- <div class="md-form">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Required Doses:</label>
                                                 </div> -->
                                                 <div class="md-form">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Immunization Date:</label>
-                                                    <input class="form-control" type="date" name="immune_date" id="immune_date">
+                                                    <input required class="form-control" type="date" name="immune_date" id="immune_date">
                                                 </div>
                                                 <div class="md-form">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Remarks:</label>
@@ -126,12 +200,28 @@
                             {% for vaccine in vaccines %}
                             <tbody>
                                 <tr>
-                                    <td class="text-center"></td>
-                                    <td class="text-center">{{ vaccine.vax_name }}</td>
-                                    <td class="text-center">{{ vaccine.vax_dose }}</td>
-                                    <td class="text-center">1</td>
-                                    <td class="text-center">{{ vaccine.vax_date }}</td>
-                                    <td class="text-center">{{ vaccine.vax_remarks }}</td>
+                                    {% if vaccine.vax_name == 'Oral Poliovirus Vaccine' or vaccine.vax_name == 'Pentavalent Vaccine' or vaccine.vax_name == 'Measles Containing Vaccines' %}
+                                        <td class="text-center"></td>
+                                        <td class="text-center">{{ vaccine.vax_name }}</td>
+                                        <td class="text-center">{{ vaccine.vax_dose }}</td>
+                                        <td class="text-center">3</td>
+                                        <td class="text-center">{{ vaccine.vax_date }}</td>
+                                        <td class="text-center">{{ vaccine.vax_remarks }}</td>
+                                    {% elif vaccine.vax_name == 'Inactivated Polio Vaccine' or vaccine.vax_name == 'Measles Mumps - Rubella' %}
+                                        <td class="text-center"></td>
+                                        <td class="text-center">{{ vaccine.vax_name }}</td>
+                                        <td class="text-center">{{ vaccine.vax_dose }}</td>
+                                        <td class="text-center">2</td>
+                                        <td class="text-center">{{ vaccine.vax_date }}</td>
+                                        <td class="text-center">{{ vaccine.vax_remarks }}</td>
+                                    {% else %}
+                                        <td class="text-center"></td>
+                                        <td class="text-center">{{ vaccine.vax_name }}</td>
+                                        <td class="text-center">{{ vaccine.vax_dose }}</td>
+                                        <td class="text-center">1</td>
+                                        <td class="text-center">{{ vaccine.vax_date }}</td>
+                                        <td class="text-center">{{ vaccine.vax_remarks }}</td>
+                                    {% endif %}
                                 </tr>
                             </tbody>
                             {% endfor %}
@@ -142,4 +232,37 @@
         </div>
     </div>
 </div>
+
+<script>
+    $(function(){
+        var dtToday = new Date();
+        
+        var month = dtToday.getMonth() + 1;
+        var day = dtToday.getDate();
+        var year = dtToday.getFullYear();
+        if(month < 10)
+            month = '0' + month.toString();
+        if(day < 10)
+            day = '0' + day.toString();
+        
+        var maxDate = year + '-' + month + '-' + day;
+
+        $('#immune_date').attr('min', maxDate);
+    });
+
+    function changeNum (vax_name) {
+        if (vax_name.value === "Oral Poliovirus Vaccine") {
+            document.getElementById("dose").value = "{{ dose_list.2 }}";
+
+        } else if (vax_name.value === "Pentavalent Vaccine") {
+            document.getElementById("dose").value = "{{ dose_list.3 }}";
+
+        } else if (vax_name.value === "Measles Containing Vaccines") {
+            document.getElementById("dose").value = "{{ dose_list.4 }}";
+            
+        } else if (vax_name.value === "Inactivated Polio Vaccine" || vax_name.value === "Measles Mumps - Rubella") {
+            document.getElementById("dose").value = 1;
+        }
+    };
+</script>
 {% endblock %}
