--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
@@ -77,7 +77,11 @@
                     </div>
                 </div> -->
                 <div class="col-xl-8 col-md-6 col-12 mb-3 text-md-start text-center">
-                    <h3>Preschoolers Immunization</h3>
+                    {% if preschooler.suffix_name is None %}
+                        <h3>{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }}'s Immunization</h3>
+                    {% else %}
+                        <h3>{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }} {{ preschooler.suffix_name }}'s Immunization</h3>
+                    {% endif %}
                 </div>
                 <div class="col-xl-4  col-md-6 col-12">
                     <div class="d-flex justify-content-md-end justify-content-center align-items-stretch">
@@ -94,28 +98,15 @@
         </div>
     </div>
     <!--------------------- DataTables --------------------->
-    <div class="text-black">
+    <div class="text-dark">
         <div class="row">
-            <div class="col p-4">
+            <div class="col p-2">
                 <div class="card-header">
                     <h3> Immunization Schedule</h3>
                 </div>
                 <div class="card shadow-lg p-3 bg-white rounded" >
                     <div class="table-responsive">
                         <table class="table table-hover table-cell-border" id="table_validation">
-                            <div class="d-flex justify-content-between">
-                            {% if preschooler.suffix_name is None %}
-                                <div class="d-flex justify-content-start">
-                                    <h5 style="font-size:20px; font-weight:bold;margin-right: 10px;">Preschooler Name:</h5>
-                                    <h5 class="text-dark mb-0" style="font-size: 20px;">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }}</h5>
-                                </div>
-                            {% else %}
-                                <div class="d-flex justify-content-start">
-                                    <h5 style="font-size:20px; font-weight:bold; margin-right:10px;">Preschooler Name:</h5>
-                                    <h5 class="text-dark mb-0" style="font-size: 20px;">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }} {{ preschooler.suffix_name }}</p>
-                                </div>
-                            {% endif %}
-                            </div>
                             <div class="d-flex justify-content-start">
                                 <h5 style="font-size:20px; font-weight:bold;margin-right: 10px;">Next Vaccine Date:</h5>
                                 <h5 class="text-dark mb-0" style="font-size: 20px;">{{ next_vax }}</h5>
@@ -312,6 +303,35 @@
                             {% endfor %}
                         </table>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col p-2 mt-2">
+            <div class="card-header">
+                <h3> Immunization Status </h3>
+            </div>
+            <div class="card shadow-lg p-3 bg-white rounded" >
+                <div class="table-responsive">
+                    <table class="table table-hover table-cell-border" id="table_validation">
+                        <thead>
+                            <tr>
+                                <th scope="col" class="text-center">Age</th>
+                                <th scope="col" class="text-center">Number of Required Vaccine</th>
+                                <th scope="col" class="text-center">Number of Taken Vaccine</th>
+                                <th scope="col" class="text-center">Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                    <td class="text-center">35 months</td>
+                                    <td class="text-center">3</td>
+                                    <td class="text-center">3</td>
+                                    <td class="text-center">Completed</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
